fixed dark mode

--- a/style.css
+++ b/style.css
@@ -41,13 +41,9 @@ body{
     padding: 0.1rem;
 }
 
-.switchbutton{
-    background-color: var(--text-color);
-}
-
 #theme-Switch {
-  height: 50px;
-  width: 50px;
+  height: 35px;
+  width: 35px;
   padding: 0;
   border-radius: 50%;
   background-color: var(--switch-bg);
@@ -56,7 +52,6 @@ body{
   justify-content: center;
   align-items: center;
 
-  position: fixed;
   top: 20px;
   right: 20px;
 
